# CSC369-Summer-2018

./: .gitignore  README.md
a1/starter_code/starter_code/: interceptor.c
a2/: CMakeLists.txt
a2/starter/: CMakeLists.txt  clock.c  fifo.c  lru.c  opt.c  pagetable.c  pagetable.h  swap.c
a3/: CMakeLists.txt  Makefile  ext2_cp.c  ext2_helper.h  ext2_ln.c  ext2_ls.c  ext2_mkdir.c  ext2_rm.c  list.h  read_images.c  tmp.c
